--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
-<html lang="ja-JP">
- <head>
-  <meta charset="UTF-8">
-  <title>トップページ | osdev.jp - 日本のOS開発コミュニティ</title>
- </head>
- <body>
-  <h1>osdev.jp - 日本のOS開発コミュニティ</h1>
-  <p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
-  <h2>目次</h2>
-  <ul>
-   <li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
-   <li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
-   <li><a href="https://osdev-jp.slack.com">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
-  </ul>
-  <h2>最新情報</h2>
-  <a class="twitter-timeline"  href="https://twitter.com/hashtag/osdev_moku2" data-widget-id="909689043650101248">#osdev_moku2 のツイート</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
- </body>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="ja-JP">
+	<head>
+		<meta charset="UTF-8">
+		<title>トップページ | osdev.jp - 日本のOS開発コミュニティ</title>
+		<meta name="application-name" content="osdev.jp" />
+		<meta name="author" content="osdev.jp members">
+		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
+		<meta name="keywords" content="" />
+		<link rel="stylesheet" href="./blacool.css" type="text/css" />
+	</head>
+	<body>
+		<div id="container">
+			<!-- ヘッダー開始 -->
+			<header>
+				<h1 id="top">osdev.jp - 日本のOS開発コミュニティ</h1>
+				<p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
+			</header>
+			<!-- ヘッダー終了 -->
+
+			<!-- メインコンテンツ 開始 -->
+			<div id="main">
+
+				<!-- 本文開始 -->
+				<section class="main">
+					<h1>トップページ</h1>
+					<!-- 目次 -->
+					<article id="contents">
+						<h2>目次</h2>
+						<ul>
+							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
+							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
+							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
+						</ul>
+					</article>
+				</section>
+				<!-- 本文終了 -->
+
+				<!-- サイドバー開始 -->
+				<nav>
+					<!-- 最新情報 (Twitter#osdev_moku2) -->
+					<article id="news-twitter">
+						<h2>最新情報</h2>
+						<a class="twitter-timeline"  href="https://twitter.com/hashtag/osdev_moku2" data-widget-id="909689043650101248">#osdev_moku2 のツイート</a>
+						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+					</article>
+				</nav>
+				<!-- サイドバー終了 -->
+
+			</div>
+			<!-- メインコンテンツ 終了 -->
+
+			<!-- フッター開始 -->
+			<footer>
+				<small>Community: osdev.jp members</small><br />
+				<small>Website: Copytight (C) 2018 Takym.</small>
+			</footer>
+			<!-- フッター終了 -->
+		</div>
+	</body>
 </html>
