blacoolディレクトリ作成、関連ファイルの移動、その他細かい修正

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="osdev.jp members">
 		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="./blacool.css" type="text/css" />
+		<link rel="stylesheet" href="./blacool/blacool.css" type="text/css" />
 	</head>
 	<body>
 		<div id="container">
@@ -34,6 +34,7 @@
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
 						</ul>
 					</article>
+					<br />
 				</section>
 				<!-- 本文終了 -->
 
@@ -45,6 +46,7 @@
 						<a class="twitter-timeline"  href="https://twitter.com/hashtag/osdev_moku2" data-widget-id="909689043650101248">#osdev_moku2 のツイート</a>
 						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 					</article>
+					<br />
 				</nav>
 				<!-- サイドバー終了 -->
 
