index.htmlに参考資料を追加した

--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
 						</ul>
 					</article>
 					<br />
+					<!-- 参考資料 -->
+					<article id="resources">
+						<h2>参考資料</h2>
+						<h3>教育用組み込みOSの開発</h3>
+						<a href="./slides/osdev_moku2_13th/develop-educational-embeded-os_sample-task-sw-1.pptx">ダウンロード</a><br />
+						<p>作成者：加藤丈治 (<a href="https://github.com/takekato">@takekato</a>)</p>
+						<p>発表日：2018/08/05</p>
+					</article>
 				</section>
 				<!-- 本文終了 -->
 
 				<!-- サイドバー開始 -->
 				<nav>
-					<!-- 最新情報 (Twitter#osdev_moku2) -->
-					<article id="news-twitter">
+					<!-- 最新情報 -->
+					<article id="news">
 						<h2>最新情報</h2>
-						<a class="twitter-timeline"  href="https://twitter.com/hashtag/osdev_moku2" data-widget-id="909689043650101248">#osdev_moku2 のツイート</a>
-						<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+						<br />
 					</article>
 					<br />
 				</nav>
