rules.html追加、及び、blacool.css変更

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div id="container">
 			<!-- ヘッダー開始 -->
 			<header>
-				<h1 id="top">osdev.jp - 日本のOS開発コミュニティ</h1>
+				<h1 id="top"><a href="./index.html">osdev.jp</a> - 日本のOS開発コミュニティ</h1>
 				<p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
 			</header>
 			<!-- ヘッダー終了 -->
@@ -32,6 +32,7 @@
 							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
+							<li><a href="./rules.html">コミュニティガイドライン</a></li>
 						</ul>
 					</article>
 					<br />
@@ -43,6 +44,7 @@
 						<p>作成者：加藤丈治 (<a href="https://github.com/takekato">@takekato</a>)</p>
 						<p>発表日：2018/08/05</p>
 					</article>
+					<br />
 				</section>
 				<!-- 本文終了 -->
 
