--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<h2>目次</h2>
 						<ul>
 							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
+							<li><a href="https://osdev-jp.readthedocs.io/ja/latest/">Core Wiki</a></li>
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
 							<li><a href="./rules.html">コミュニティガイドライン</a></li>
@@ -70,12 +71,4 @@
 			<!-- フッター終了 -->
 		</div>
 	</body>
-<h2>osdev-jp</h2>
-<p>osdev-jpでは、OS開発に有用な情報を収集し公開しています</p>
-  <ul>
-    <li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています．GitHubアカウントがあれば編集できます．</li>
-    <li><a href="https://github.com/osdev-jp">GitHub</a> サンプルコードなどが置いてあります．</li>
-    <li><a href="https://osdev-jp.slack.com">Slack</a> OS 開発に関する話をするosdev-jp公式チャットです．</li>
-  </ul>
-  </body>
 </html>
