--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<h2>目次</h2>
 						<ul>
 							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
-							<li><a href="https://osdev-jp.readthedocs.io/ja/latest/">Core Wiki</a></li>
+							<li><a href="https://osdev-jp.readthedocs.io/ja/latest/">Core Wiki</a> - osdev-jp のコアメンバが執筆した技術文書を掲載する場所です。OS 開発に役立つ記事ばかりを扱っています。</li>
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
 							<li><a href="./rules.html">コミュニティガイドライン</a></li>
