blacool 更新 0.0.0.0 から 0.0.0.1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="application-name" content="osdev.jp" />
 		<meta name="author" content="osdev.jp members">
 		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
-		<meta name="keywords" content="" />
+		<meta name="keywords" content="osdev-jp,OS開発,プログラミングコミュニティ,低レイヤ,トップページ" />
 		<link rel="stylesheet" href="./blacool/blacool.css" type="text/css" />
 	</head>
 	<body>
