--- a/rules.html
+++ b/rules.html
@@ -7,7 +7,7 @@
 		<meta name="application-name" content="osdev.jp" />
 		<meta name="author" content="osdev.jp members">
 		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
-		<meta name="keywords" content="" />
+		<meta name="keywords" content="osdev-jp,OS開発,プログラミングコミュニティ,低レイヤ,コミュニティガイドライン,規則,規約,ルール,献上方法" />
 		<link rel="stylesheet" href="./blacool/blacool.css" type="text/css" />
 	</head>
 	<body>
@@ -23,7 +23,7 @@
 			<div id="main">
 
 				<!-- 本文開始 -->
-				<section class="main">
+				<section class="main" nav="hide">
 					<h1>コミュニティガイドライン</h1>
 					<p>この記事の前半部分は<a href="./GUIDELINES.md">GUIDELINES.md</a>から、後半部分は<a href="./CONTRIBUTE.md">CONTRIBUTE.md</a>から移植してきた物です。</p>
 					<p>このガイドラインは、osdev-jpに所属する各メンバーが、円滑にコミュニティを利用・運営できるよう定めるものです。</p>
@@ -158,16 +158,7 @@
 				</section>
 				<!-- 本文終了 -->
 
-				<!-- サイドバー開始 -->
-				<nav>
-					<!-- 最新情報 -->
-					<article id="news">
-						<h2>最新情報</h2>
-						<br />
-					</article>
-					<br />
-				</nav>
-				<!-- サイドバー終了 -->
+				<!-- このページではサイドバーは無し -->
 
 			</div>
 			<!-- メインコンテンツ 終了 -->
