サイドバーにサイト内リンク追加

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 					<article id="contents">
 						<h2>目次</h2>
 						<ul>
-							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
+							<li><a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki">Wiki</a> - OS開発に役立つ情報が集まっています。GitHubアカウントがあれば編集できます。</li>
 							<li><a href="https://osdev-jp.readthedocs.io/ja/latest/">Core Wiki</a> - osdev-jp のコアメンバが執筆した技術文書を掲載する場所です。OS 開発に役立つ記事ばかりを扱っています。</li>
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
-							<li><a href="./rules.html">コミュニティガイドライン</a></li>
+							<li><a href="./rules.html">コミュニティガイドライン</a> - このコミュニティの規則です。</li>
+							<li><a href="./advcals.html">アドベントカレンダー</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
 						</ul>
 					</article>
 					<br />
@@ -55,6 +56,16 @@
 					<article id="news">
 						<h2>最新情報</h2>
 						<br />
+					</article>
+					<br />
+					<!-- サイト内リンク -->
+					<article>
+						<h2>サイト内リンク</h2>
+						<ul>
+								<li><a href="./index.html">トップページ</a></li>
+								<li><a href="./rules.html">コミュニティガイドライン</a></li>
+								<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
+						</ul>
 					</article>
 					<br />
 				</nav>
