--- a/rules.html
+++ b/rules.html
@@ -155,6 +155,7 @@
 					</article>
 					<br />
 					<h3><b><u>osdev-jpの品質向上に努めましょう！</u></b></h3>
+					<a href="./index.html">トップページへ</a>
 				</section>
 				<!-- 本文終了 -->
 
