--- a/advcals.html
+++ b/advcals.html
@@ -86,68 +86,21 @@
 				</section>
 				<!-- 本文終了 -->
 
-								<!-- サイドバー開始 -->
+				<!-- サイドバー開始 -->
 				<nav>
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
-					</article>
-					<br />
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
-					</article>
-					<br />
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
+					<!-- サイト内リンク -->
+					<article>
+						<h2>サイト内リンク</h2>
+						<ul>
+								<li><a href="./index.html">トップページ</a></li>
+								<li><a href="./rules.html">コミュニティガイドライン</a></li>
+								<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
+						</ul>
 					</article>
 					<br />
 				</nav>
 				<!-- サイドバー終了 -->
-				
+
 			</div>
 			<!-- メインコンテンツ 終了 -->
 
