アドベントカレンダーの一覧ページ完成

--- a/advcals.html
+++ b/advcals.html
@@ -26,61 +26,41 @@
 				<!-- 本文開始 --> 
 				<section class="main" nav="show">
 					<h1>アドベントカレンダー</h1>
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
+					<p>自作OS系のアドベントカレンダーの一覧ページです。</p>
+					<p>OSには直接関係無い低レイヤの話題も扱っています。</p>
+					<ul>
+						<li><a href="#2018">2018年</a></li>
+						<li><a href="#2017">2017年</a></li>
+						<li><a href="#2016">2016年</a></li>
+						<li>2015年 (無し)</li>
+						<li><a href="#2014">2014年</a></li>
+					</ul>
+					<!-- 2018年 -->
+					<article id="2018">
+						<h2>2018年</h2>
+						<p><b>URL:</b><a href="https://adventar.org/calendars/2915">https://adventar.org/calendars/2915</a></p>
+						<p><b>記事の数:</b>25/25</p>
 					</article>
 					<br />
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
+					<!-- 2017年 -->
+					<article id="2017">
+						<h2>2017年</h2>
+						<p><b>URL:</b><a href="https://adventar.org/calendars/2282">https://adventar.org/calendars/2282</a></p>
+						<p><b>記事の数:</b>25/25</p>
 					</article>
 					<br />
-					<!-- 記事 (例) -->
-					<article id="contents">
-						<h2>見出し</h2>
-						<p>
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-							内容をここに挿入。内容をここに挿入。内容をここに挿入。
-						</p>
+					<!-- 2016年 -->
+					<article id="2016">
+						<h2>2016年</h2>
+						<p><b>URL:</b><a href="https://adventar.org/calendars/1666">https://adventar.org/calendars/1666</a></p>
+						<p><b>記事の数:</b>25/25</p>
+					</article>
+					<br />
+					<!-- 2014年 -->
+					<article id="2014">
+						<h2>2014年</h2>
+						<p><b>URL:</b><a href="https://adventar.org/calendars/511">https://adventar.org/calendars/511</a></p>
+						<p><b>記事の数:</b>13/25</p>
 					</article>
 					<br />
 				</section>
@@ -89,7 +69,7 @@
 				<!-- サイドバー開始 -->
 				<nav>
 					<!-- サイト内リンク -->
-					<article>
+					<article id="links">
 						<h2>サイト内リンク</h2>
 						<ul>
 								<li><a href="./index.html">トップページ</a></li>
