--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</article>
 					<br />
 					<!-- サイト内リンク -->
-					<article>
+					<article id="links">
 						<h2>サイト内リンク</h2>
 						<ul>
 								<li><a href="./index.html">トップページ</a></li>
