blacoolテンプレートのosdev.jpをリンク化

--- a/advcals.html
+++ b/advcals.html
@@ -15,7 +15,7 @@
 		<div id="container">
 			<!-- ヘッダー開始 -->
 			<header>
-				<h1 id="top">osdev.jp - 日本のOS開発コミュニティ</h1>
+				<h1 id="top"><a href="./index.html">osdev.jp</a> - 日本のOS開発コミュニティ</h1>
 				<p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
 			</header>
 			<!-- ヘッダー終了 -->
