「自作OS イベント＆ニュース」ページの作成

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
 							<li><a href="./rules.html">コミュニティガイドライン</a> - このコミュニティの規則です。</li>
-							<li><a href="./advcals.html">アドベントカレンダー</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
+							<li><a href="./history.html">自作OS イベント＆ニュース</a> - 自作OSに関係する出来事をまとめています。</li>
+							<li><a href="./advcals.html">アドベントカレンダー一覧</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
 						</ul>
 					</article>
 					<br />
@@ -64,6 +65,7 @@
 						<ul>
 								<li><a href="./index.html">トップページ</a></li>
 								<li><a href="./rules.html">コミュニティガイドライン</a></li>
+								<li><a href="./history.html">自作OS イベント＆ニュース</a></li>
 								<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
 						</ul>
 					</article>
