--- a/advcals.html
+++ b/advcals.html
@@ -515,6 +515,7 @@
 						<ul>
 								<li><a href="./index.html">トップページ</a></li>
 								<li><a href="./rules.html">コミュニティガイドライン</a></li>
+								<li><a href="./history.html">自作OS イベント＆ニュース</a></li>
 								<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
 						</ul>
 					</article>
