history.htmlに項目追加、参考資料追加、その他細かい修正

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<li><a href="https://github.com/osdev-jp">GitHub</a> - サンプルコードなどが置いてあります。</li>
 							<li><a href="https://osdev-jp.slack.com/">Slack</a> - OS開発に関する話をするosdev-jpの公式チャットです。</li>
 							<li><a href="./rules.html">コミュニティガイドライン</a> - このコミュニティの規則です。</li>
-							<li><a href="./history.html">自作OS イベント＆ニュース</a> - 自作OSに関係する出来事をまとめています。</li>
+							<li><a href="./history.html">自作OS イベント＆ニュース</a> - 自作OSに関係する出来事/最新情報をまとめています。</li>
 							<li><a href="./advcals.html">アドベントカレンダー一覧</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
 						</ul>
 					</article>
@@ -42,6 +42,12 @@
 					<!-- 参考資料 -->
 					<article id="resources">
 						<h2>参考資料</h2>
+						<p>このウェブサイト(リポジトリ)に直接保存されている資料の一覧です。</p>
+						<p>これ以外の資料は<a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki/osdev-moku2-presentations">こちら</a>をご覧ください。</p>
+						<h3>教育用組み込みOSの開発 - OS開発最初の1歩</h3>
+						<a href="./files/slides/osdev_moku2_14th/develop-educational-embeded-os_sample-task-sw-2.pptx">ダウンロード</a>
+						<p>作成者：加藤丈治 (<a href="https://github.com/takekato">@takekato</a>)</p>
+						<p>発表日：2019/01/20</p>
 						<h3>教育用組み込みOSの開発</h3>
 						<a href="./files/slides/osdev_moku2_13th/develop-educational-embeded-os_sample-task-sw-1.pptx">ダウンロード</a><br />
 						<p>作成者：加藤丈治 (<a href="https://github.com/takekato">@takekato</a>)</p>
