--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 				<!-- 本文開始 -->
 				<section class="main">
 					<h1>トップページ</h1>
+					<!-- メッセージ (注意文) -->
+					<article id="messages">
+						<strong style="color:red;font-size:160%">注意</strong>
+						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、公式の物ではありません。</p>
+						<p>本家サイトは<a href="http://osdev.jp">こちら</a>です。</p>
+						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願いします。</p>
+					</article>
 					<!-- 目次 -->
 					<article id="contents">
 						<h2>目次</h2>
@@ -43,10 +50,11 @@
 					</article>
 					<br />
 					<!-- 参考資料 -->
+					<!-- フォーク元のリポジトリに付属していたファイルへのリンク -->
 					<article id="resources">
 						<h2>参考資料</h2>
 						<p>このウェブサイト(リポジトリ)に直接保存されている資料の一覧です。</p>
-						<p>これ以外の資料は<a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki/osdev-moku2-presentations">こちら</a>をご覧ください。</p>
+						<p>これ以外の資料は<a href="https://github.com/osdev-jp/osdev-jp.github.io/wiki/osdev-moku2-presentations">こちら</a>をご確認ください。</p>
 						<h3>教育用組み込みOSの開発 - OS開発最初の1歩</h3>
 						<a href="./files/slides/osdev_moku2_14th/develop-educational-embeded-os_sample-task-sw-2.pptx">ダウンロード</a>
 						<p>作成者：加藤丈治 (<a href="https://github.com/takekato">@takekato</a>)</p>
