slack.htmlに新チャンネルの情報を追加

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<!-- メッセージ (注意文) -->
 					<article id="messages">
 						<strong style="color:red;font-size:160%">注意</strong>
-						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、公式の物ではありません。</p>
+						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、非公式です。</p>
 						<p>本家サイトは<a href="http://osdev.jp">こちら</a>です。</p>
 						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願いします。</p>
 					</article>
