--- a/slack.html
+++ b/slack.html
@@ -66,6 +66,8 @@
 							<dd>Cybozu Live の代替品の開発について議論します。</dd>
 							<!--dt>#九州大学鳥人間システム</dt>
 							<dd></dd-->
+							<dt>#site-renewal</dt>
+							<dd><a href="http://osdev.jp">本家サイト</a>の発展について議論します。</dd>
 						</dl>
 					</article>
 					<br />
