自作OSもくもく会、参加方法の情報を追加

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<strong style="color:red;font-size:160%">注意</strong>
 						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、非公式です。</p>
 						<p>本家サイトは<a href="http://osdev.jp">こちら</a>です。</p>
-						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願いします。</p>
+						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願されたす。</p>
 					</article>
 					<!-- 目次 -->
 					<article id="contents">
@@ -47,6 +47,20 @@
 							<li><a href="./history.html">自作OS イベント＆ニュース</a> - 自作OSに関係する出来事/最新情報をまとめています。</li>
 							<li><a href="./advcals.html">アドベントカレンダー一覧</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
 						</ul>
+					</article>
+					<br />
+					<!-- 自作OSもくもく会 -->
+					<article id="moku2">
+						<h2>自作OSもくもく会</h2>
+						<p>隔月ごとに開催されます。</p>
+						<p>詳しくは<a href="https://atnd.org/groups/osdev-jp">ATND</a>をご覧ください。</p>
+						<a href="https://twitter.com/intent/tweet?button_hashtag=osdev_moku2&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">#osdev_moku2 で呟く</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+					</article>
+					<!-- 参加方法 -->
+					<article id="join_us">
+						<h2>参加方法</h2>
+						<p>既に参加しているメンバーまたは、<a href="https://github.com/orgs/osdev-jp/people">管理者</a>まで問い合わせください。</p>
+						<p>自作OSもくもく会に参加された方はその場で登録します。</p>
 					</article>
 					<br />
 					<!-- 参考資料 -->
