Twitterタグの修正

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 						<h2>自作OSもくもく会</h2>
 						<p>隔月ごとに開催されます。</p>
 						<p>詳しくは<a href="https://atnd.org/groups/osdev-jp">ATND</a>をご覧ください。</p>
-						<a href="https://twitter.com/intent/tweet?button_hashtag=osdev_moku2&ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-show-count="false">#osdev_moku2 で呟く</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 					</article>
 					<!-- 参加方法 -->
 					<article id="join_us">
@@ -87,6 +86,7 @@
 					<!-- 最新情報 -->
 					<article id="news">
 						<h2>最新情報</h2>
+						<p><a href="https://twitter.com/intent/tweet?button_hashtag=osdev_moku2&amp;ref_src=twsrc%5Etfw" class="twitter-hashtag-button" data-size="large" data-lang="ja" data-show-count="false">Tweet #osdev_moku2</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></p>
 						<br />
 					</article>
 					<br />
