Easy CPU バージョンアップ

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 							<li><a href="./rules.html">コミュニティガイドライン</a> - このコミュニティの規則です。</li>
 							<li><a href="./history.html">自作OS イベント＆ニュース</a> - 自作OSに関係する出来事/最新情報をまとめています。</li>
 							<li><a href="./advcals.html">アドベントカレンダー一覧</a> - 自作OSに関係するアドベントカレンダーをまとめています。</li>
+							<li><a href="./easycpu/index.html">Easy CPU</a></li>
 						</ul>
 					</article>
 					<br />
