--- a/slack.html
+++ b/slack.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja-JP">
 	<head>
 		<meta charset="UTF-8">
-		<title>Slack チャンネル一覧 | <a href="./index.html">osdev.jp</a> - 日本のOS開発コミュニティ</title>
+		<title>Slack チャンネル一覧 | osdev.jp - 日本のOS開発コミュニティ</title>
 		<meta name="application-name" content="osdev.jp" />
 		<meta name="author" content="osdev.jp members">
 		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
