--- a/easycpu/index.html
+++ b/easycpu/index.html
@@ -30,6 +30,14 @@
 						<b>Easy CPU</b>はブラウザ上で簡易的に独自の命令セットのCPU(実在しない)をエミュレートします。
 						このソフトウェアは初心者向けに開発しています。現在はまだ安定版はありません。
 					</p>
+					<!-- バージョン一覧 -->
+					<article id="verlist">
+						<h2>バージョン一覧</h2>
+						<ul>
+							<li><a href="v0_0a.html">v0_0a</a> MOV R0命令が使える様になりました。</li>
+						</ul>
+					</article>
+					<br />
 					<!-- 古いバージョン -->
 					<article id="oldver">
 						<h2>古いバージョン</h2>
