「自作OS イベント＆ニュース」更新

--- a/history.html
+++ b/history.html
@@ -50,10 +50,14 @@
 								</tr>
 							</thead>
 							<tbody>
-								<!-- tr> // wiki に正確な情報が載っていない為、取り敢えずコメントアウトしておく。
+								<tr>
+									<td>2019/05/12</td>
+									<td><a href="https://atnd.org/events/104831">第15回「自作OSもくもく会」</a>を開催予定。</td>
+								</tr>
+								<tr>
 									<td>2019/01/20</td>
-									<td><a href="https://atnd.org/events/">第14回「自作OSもくもく会」</a>を開催。</td>
-								</tr -->
+									<td><a href="https://atnd.org/events/102594">第14回「自作OSもくもく会」</a>を開催。</td>
+								</tr>
 								<tr>
 									<td>2018/12/01</td>
 									<td><a href="./advcals.html#2018">自作OS Advent Calander 2018</a>を実施。</td>
@@ -157,6 +161,10 @@
 								<tr>
 									<td>2016/05/01</td>
 									<td>第1回「自作OSもくもく会」を開催。</td>
+								</tr>
+								<tr>
+									<td>2016/03/30</td>
+									<td>osdev-jp 設立</td>
 								</tr>
 								<tr>
 									<td>2016/03/30</td>
