「自作OS イベント＆ニュース」更新

--- a/history.html
+++ b/history.html
@@ -52,7 +52,7 @@
 							<tbody>
 								<tr>
 									<td>2019/05/12</td>
-									<td><a href="https://atnd.org/events/104831">第15回「自作OSもくもく会」</a>を開催予定。</td>
+									<td><a href="https://atnd.org/events/104831">第15回「自作OSもくもく会」</a>を開催。</td>
 								</tr>
 								<tr>
 									<td>2019/01/20</td>
