Slackのチャンネル一覧を更新

--- a/slack.html
+++ b/slack.html
@@ -31,14 +31,14 @@
 					<article id="fuc">
 						<h2>良く使われるチャンネル</h2>
 						<dl>
-							<dt>#general</dt>
-							<dd>新規メンバーの自己紹介及びコミュニティに関わる重要なお知らせを扱います。</dd>
-							<dt>#random</dt>
-							<dd>低レイヤに関する事なら何でも話してもいい雑談用のチャンネルです。</dd>
-							<dt>#初心者質問相談</dt>
-							<dd>初心者専用の質問・相談チャンネルです。難しい事は扱いません。</dd>
-							<dt>#event</dt>
+							<dt><a href="https://osdev-jp.slack.com/messages/C626TTWMP" target="_blank">#event</a></dt>
 							<dd>各種イベントに関係する事を告知します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/C0XA3GB7F" target="_blank">#general</a></dt>
+							<dd>新規メンバーの自己紹介及びコミュニティに関わる重要なお知らせを扱います。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/C0XA87EM7" target="_blank">#random</a></dt>
+							<dd>低レイヤに関する事なら何でも話してもいい雑談用のチャンネルです。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CGEGWHRGQ" target="_blank">#初心者質問相談</a></dt>
+							<dd>初心者専用の質問・相談チャンネルです。難しい事は扱いません。</dd>
 						</dl>
 					</article>
 					<br />
@@ -46,28 +46,32 @@
 					<article id="others">
 						<h2>その他</h2>
 						<dl>
-							<dt>#進捗発表</dt>
-							<dd>自作OSの進捗状況を発表・共有します。</dd>
-							<dt>#osc</dt>
-							<dd>オープンソースカンファレンスに関する情報を告知します。</dd>
-							<dt>#uefi</dt>
-							<dd>Unified Extensible Firmware Interfaceに関係がある事を議論・質問します。</dd>
-							<dt>#acpi</dt>
+							<dt><a href="https://osdev-jp.slack.com/messages/CEYAG9HS8" target="_blank">#acpi</a></dt>
 							<dd>Advanced Configuration and Power Interfaceに関係がある事を議論・質問します。</dd>
-							<dt>#distributed-os</dt>
+							<dt><a href="https://osdev-jp.slack.com/messages/CJLGWHSDA" target="_blank">#coreboot</a></dt>
+							<dd>d0iasmのGSoCでcorebootをQemu/Aarch64上で動かすプロジェクトに関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CE3JJG5HP" target="_blank">#distributed-os</a></dt>
 							<dd>分散型オペレーティングシステムに関係がある事を議論・質問します。</dd>
-							<dt>#px86</dt>
-							<dd>x86向けのエミュレータについて議論・質問します。</dd>
-							<dt>#自作vmm</dt>
-							<dd>エミュレータやハイパーバイザ系の話題を扱うチャンネルです。</dd>
-							<dt>#osdevide</dt>
-							<dd>Takymが開発している OSDeveloper IDE の開発について議論します。</dd>
-							<dt>#live代替</dt>
+							<dt><a href="https://osdev-jp.slack.com/messages/C7PFTCP52" target="_blank">#live代替</a></dt>
 							<dd>Cybozu Live の代替品の開発について議論します。</dd>
-							<!--dt>#九州大学鳥人間システム</dt>
-							<dd></dd-->
-							<dt>#site-renewal</dt>
+							<dt><a href="https://osdev-jp.slack.com/messages/CFSE3GZFE" target="_blank">#osc</a></dt>
+							<dd>オープンソースカンファレンスに関する情報を告知します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CCLDY4VL7" target="_blank">#osdevide</a></dt>
+							<dd>Takymが開発している OSDeveloper IDE の開発について議論します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CDEDZ60E5" target="_blank">#px86</a></dt>
+							<dd>x86向けのエミュレータについて議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CJBCZH9A6" target="_blank">#rust</a></dt>
+							<dd>プログラミング言語「Rust」に関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CGKJESNUQ" target="_blank">#site-renewal</a></dt>
 							<dd><a href="http://osdev.jp">本家サイト</a>の発展について議論します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/C1Q8UHHNX" target="_blank">#uefi</a></dt>
+							<dd>Unified Extensible Firmware Interfaceに関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CC64UJ4GK" target="_blank">#九州大学鳥人間システム</a></dt>
+							<dd>九州大学の鳥人間システムプロジェクトに関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CA0N3LCTE" target="_blank">#自作vmm</a></dt>
+							<dd>エミュレータやハイパーバイザ系の話題を扱うチャンネルです。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CA13F2LAH" target="_blank">#進捗発表</a></dt>
+							<dd>自作OSの進捗状況を発表・共有します。</dd>
 						</dl>
 					</article>
 					<br />
