注意文書き換え

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 					<article id="messages">
 						<strong style="color:red;font-size:160%">注意</strong>
 						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、非公式です。</p>
-						<p>本家サイトは<a href="http://osdev.jp">こちら</a>です。</p>
-						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願されたす。</p>
+						<p>本家サイトは<a href="http://osdev.jp">http://osdev.jp</a>です。フォーク元のGitリポジトリは<a href="https://github.com/osdev-jp/osdev-jp.github.io">https://github.com/osdev-jp/osdev-jp.github.io</a>です。</p>
+						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願します。</p>
+						<p>このコミュニティは<a href="https://osdev.org">osdev.org</a>とは無関係です。</p>
 					</article>
 					<!-- 目次 -->
 					<article id="contents">
@@ -95,10 +96,10 @@
 					<article id="links">
 						<h2>サイト内リンク</h2>
 						<ul>
-								<li><a href="./index.html">トップページ</a></li>
-								<li><a href="./rules.html">コミュニティガイドライン</a></li>
-								<li><a href="./history.html">自作OS イベント＆ニュース</a></li>
-								<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
+							<li><a href="./index.html">トップページ</a></li>
+							<li><a href="./rules.html">コミュニティガイドライン</a></li>
+							<li><a href="./history.html">自作OS イベント＆ニュース</a></li>
+							<li><a href="./advcals.html">自作OS アドカレ 一覧</a></li>
 						</ul>
 					</article>
 					<br />
