コミュニティ名や著作権表記等、細かな変更

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja-JP">
 	<head>
 		<meta charset="UTF-8">
-		<title>トップページ | osdev.jp - 日本のOS開発コミュニティ</title>
-		<meta name="application-name" content="osdev.jp" />
-		<meta name="author" content="osdev.jp members">
-		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
+		<title>トップページ | osdev-jp - 日本のOS開発コミュニティ</title>
+		<meta name="application-name" content="osdev-jp" />
+		<meta name="author" content="osdev-jp members">
+		<meta name="description" content="osdev-jpはOS開発に有用な情報を収集し公開しています。" />
 		<meta name="keywords" content="osdev-jp,OS開発,プログラミングコミュニティ,低レイヤ,トップページ" />
 		<link rel="stylesheet" href="./blacool/blacool.css" type="text/css" />
 	</head>
@@ -14,8 +14,8 @@
 		<div id="container">
 			<!-- ヘッダー開始 -->
 			<header>
-				<h1 id="top"><a href="./index.html">osdev.jp</a> - 日本のOS開発コミュニティ</h1>
-				<p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
+				<h1 id="top"><a href="./index.html">osdev-jp</a> - 日本のOS開発コミュニティ</h1>
+				<p>osdev-jpはOS開発に有用な情報を収集し公開しています。</p>
 			</header>
 			<!-- ヘッダー終了 -->
 
@@ -29,7 +29,7 @@
 					<article id="messages">
 						<strong style="color:red;font-size:160%">注意</strong>
 						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、非公式です。</p>
-						<p>本家サイトは<a href="http://osdev.jp">http://osdev.jp</a>です。フォーク元のGitリポジトリは<a href="https://github.com/osdev-jp/osdev-jp.github.io">https://github.com/osdev-jp/osdev-jp.github.io</a>です。</p>
+						<p>本家サイトは<a href="http://osdev-jp">http://osdev-jp</a>です。フォーク元のGitリポジトリは<a href="https://github.com/osdev-jp/osdev-jp.github.io">https://github.com/osdev-jp/osdev-jp.github.io</a>です。</p>
 						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願します。</p>
 						<p>このコミュニティは<a href="https://osdev.org">osdev.org</a>とは無関係です。</p>
 					</article>
@@ -111,8 +111,8 @@
 
 			<!-- フッター開始 -->
 			<footer>
-				<small>Community: osdev.jp members</small><br />
-				<small>Website: Copytight (C) 2018 Takym.</small>
+				<small>Community: osdev-jp members</small><br />
+				<small>Website: Copytight (C) 2019 Takym.</small>
 			</footer>
 			<!-- フッター終了 -->
 		</div>
