--- a/rules.html
+++ b/rules.html
@@ -3,10 +3,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="ja-JP">
 	<head>
 		<meta charset="UTF-8">
-		<title>コミュニティガイドライン | osdev.jp - 日本のOS開発コミュニティ</title>
-		<meta name="application-name" content="osdev.jp" />
-		<meta name="author" content="osdev.jp members">
-		<meta name="description" content="osdev.jpはOS開発に有用な情報を収集し公開しています。" />
+		<title>コミュニティガイドライン | osdev-jp - 日本のOS開発コミュニティ</title>
+		<meta name="application-name" content="osdev-jp" />
+		<meta name="author" content="osdev-jp members">
+		<meta name="description" content="osdev-jpはOS開発に有用な情報を収集し公開しています。" />
 		<meta name="keywords" content="osdev-jp,OS開発,プログラミングコミュニティ,低レイヤ,コミュニティガイドライン,規則,規約,ルール,献上方法" />
 		<link rel="stylesheet" href="./blacool/blacool.css" type="text/css" />
 	</head>
@@ -14,8 +14,8 @@
 		<div id="container">
 			<!-- ヘッダー開始 -->
 			<header>
-				<h1 id="top"><a href="./index.html">osdev.jp</a> - 日本のOS開発コミュニティ</h1>
-				<p>osdev.jpはOS開発に有用な情報を収集し公開しています。</p>
+				<h1 id="top"><a href="./index.html">osdev-jp</a> - 日本のOS開発コミュニティ</h1>
+				<p>osdev-jpはOS開発に有用な情報を収集し公開しています。</p>
 			</header>
 			<!-- ヘッダー終了 -->
 
@@ -166,8 +166,8 @@
 
 			<!-- フッター開始 -->
 			<footer>
-				<small>Community: osdev.jp members</small><br />
-				<small>Website: Copytight (C) 2018 Takym.</small>
+				<small>Community: osdev-jp members</small><br />
+				<small>Website: Copytight (C) 2019 Takym.</small>
 			</footer>
 			<!-- フッター終了 -->
 		</div>
