Easy CPU、注意文追加

--- a/easycpu/index.html
+++ b/easycpu/index.html
@@ -28,7 +28,8 @@
 					<h1>Easy CPU</h1>
 					<p>
 						<b>Easy CPU</b>はブラウザ上で簡易的に独自の命令セットのCPU(実在しない)をエミュレートします。
-						このソフトウェアは初心者向けに開発しています。現在はまだ安定版はありません。
+						このソフトウェアは初心者向けに開発しています。現在はまだ安定版はなく、更新する予定もありません。
+						このページは、参考までに残してあります。
 					</p>
 					<!-- バージョン一覧 -->
 					<article id="verlist">
