--- a/history.html
+++ b/history.html
@@ -51,6 +51,10 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>2019/07/15</td>
+									<td><a href="https://atnd.org/events/106678">第16回「自作OSもくもく会」</a>を開催。</a></td>
+								</tr>
+								<tr>
 									<td>2019/05/12</td>
 									<td><a href="https://atnd.org/events/104831">第15回「自作OSもくもく会」</a>を開催。</td>
 								</tr>
