slack.html に libcxx を追加。

--- a/slack.html
+++ b/slack.html
@@ -47,25 +47,27 @@
 						<h2>その他</h2>
 						<dl>
 							<dt><a href="https://osdev-jp.slack.com/messages/CEYAG9HS8" target="_blank">#acpi</a></dt>
-							<dd>Advanced Configuration and Power Interfaceに関係がある事を議論・質問します。</dd>
+							<dd>Advanced Configuration and Power Interface に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CJLGWHSDA" target="_blank">#coreboot</a></dt>
-							<dd>d0iasmのGSoCでcorebootをQemu/Aarch64上で動かすプロジェクトに関係がある事を議論・質問します。</dd>
+							<dd>d0iasm の GSoC で coreboot を Qemu/Aarch64 上で動かすプロジェクトに関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CE3JJG5HP" target="_blank">#distributed-os</a></dt>
 							<dd>分散型オペレーティングシステムに関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CLN0Q6A4X" target="_blank">#libcxx</a></dt>
+							<dd>libcxx に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/C7PFTCP52" target="_blank">#live代替</a></dt>
 							<dd>Cybozu Live の代替品の開発について議論します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CFSE3GZFE" target="_blank">#osc</a></dt>
 							<dd>オープンソースカンファレンスに関する情報を告知します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CCLDY4VL7" target="_blank">#osdevide</a></dt>
-							<dd>Takymが開発している OSDeveloper IDE の開発について議論します。</dd>
+							<dd>Takym が開発している OSDeveloper IDE の開発について議論します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CDEDZ60E5" target="_blank">#px86</a></dt>
-							<dd>x86向けのエミュレータについて議論・質問します。</dd>
+							<dd>x86 向けのエミュレータについて議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CJBCZH9A6" target="_blank">#rust</a></dt>
 							<dd>プログラミング言語「Rust」に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CGKJESNUQ" target="_blank">#site-renewal</a></dt>
 							<dd><a href="http://osdev-jp">本家サイト</a>の発展について議論します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/C1Q8UHHNX" target="_blank">#uefi</a></dt>
-							<dd>Unified Extensible Firmware Interfaceに関係がある事を議論・質問します。</dd>
+							<dd>Unified Extensible Firmware Interface に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CC64UJ4GK" target="_blank">#九州大学鳥人間システム</a></dt>
 							<dd>九州大学の鳥人間システムプロジェクトに関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CA0N3LCTE" target="_blank">#自作vmm</a></dt>
