--- a/slack.html
+++ b/slack.html
@@ -52,6 +52,8 @@
 							<dd>d0iasm の GSoC で coreboot を Qemu/Aarch64 上で動かすプロジェクトに関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CE3JJG5HP" target="_blank">#distributed-os</a></dt>
 							<dd>分散型オペレーティングシステムに関係がある事を議論・質問します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/messages/CKP3K7ASX" target="_blank">#gpd_micro_pc</a></dt>
+							<dd>GPD Micro PC に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CLN0Q6A4X" target="_blank">#libcxx</a></dt>
 							<dd>libcxx に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/C7PFTCP52" target="_blank">#live代替</a></dt>
