アドカレ用の更新

--- a/advcals.html
+++ b/advcals.html
@@ -31,16 +31,16 @@
 					<p>記事の数は実際に公開されている記事(リンクが有効でカレンダーに載っている記事)の数を表しています。</p>
 					<p>記事の題名はカレンダーに載っている題名の内、分かり易い方を採用しています。</p>
 					<ul>
-						<!--li><a href="#2019">2019年</a></li-->
+						<li><a href="#2019">2019年</a></li>
 						<li><a href="#2018">2018年</a></li>
 						<li><a href="#2017">2017年</a></li>
 						<li><a href="#2016">2016年</a></li>
 						<li>2015年 (無し)</li>
 						<li><a href="#2014">2014年</a></li>
 					</ul>
-					<!-- 2019年 -->
-					<!--article id="2019">
-						<h2>2019年</h2>
+					<!-- 2020年 -->
+					<!--article id="2020">
+						<h2>2020年</h2>
 						<p><b>URL:</b><a href="https://adventar.org/calendars/">https://adventar.org/calendars/</a></p>
 						<p><b>記事の数:</b>0/25</p>
 						<p>
@@ -50,6 +50,18 @@
 							</a>
 						</p>
 					</article-->
+					<!-- 2019年 -->
+					<article id="2019">
+						<h2>2019年</h2>
+						<p><b>URL:</b><a href="https://adventar.org/calendars/4027">https://adventar.org/calendars/4027</a></p>
+						<p><b>記事の数:</b>0/25</p>
+						<p>
+							<b>1日:</b>
+							<a href="">
+								[TITLE IN HERE]
+							</a>
+						</p>
+					</article>
 					<!-- 2018年 -->
 					<article id="2018">
 						<h2>2018年</h2>
