アーカイブ済みチャンネルの削除

--- a/slack.html
+++ b/slack.html
@@ -56,8 +56,8 @@
 							<dd>GPD Micro PC に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CLN0Q6A4X" target="_blank">#libcxx</a></dt>
 							<dd>libcxx に関係がある事を議論・質問します。</dd>
-							<dt><a href="https://osdev-jp.slack.com/messages/C7PFTCP52" target="_blank">#live代替</a></dt>
-							<dd>Cybozu Live の代替品の開発について議論します。</dd>
+							<!--dt><a href="https://osdev-jp.slack.com/messages/C7PFTCP52" target="_blank">#live代替</a></dt>
+							<dd>Cybozu Live の代替品の開発について議論します。</dd-->
 							<dt><a href="https://osdev-jp.slack.com/messages/CFSE3GZFE" target="_blank">#osc</a></dt>
 							<dd>オープンソースカンファレンスに関する情報を告知します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CCLDY4VL7" target="_blank">#osdevide</a></dt>
@@ -66,8 +66,8 @@
 							<dd>x86 向けのエミュレータについて議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CJBCZH9A6" target="_blank">#rust</a></dt>
 							<dd>プログラミング言語「Rust」に関係がある事を議論・質問します。</dd>
-							<dt><a href="https://osdev-jp.slack.com/messages/CGKJESNUQ" target="_blank">#site-renewal</a></dt>
-							<dd><a href="http://osdev-jp">本家サイト</a>の発展について議論します。</dd>
+							<!--dt><a href="https://osdev-jp.slack.com/messages/CGKJESNUQ" target="_blank">#site-renewal</a></dt>
+							<dd><a href="http://osdev-jp">本家サイト</a>の発展について議論します。</dd-->
 							<dt><a href="https://osdev-jp.slack.com/messages/C1Q8UHHNX" target="_blank">#uefi</a></dt>
 							<dd>Unified Extensible Firmware Interface に関係がある事を議論・質問します。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CC64UJ4GK" target="_blank">#九州大学鳥人間システム</a></dt>
