ニュースの更新

--- a/history.html
+++ b/history.html
@@ -51,12 +51,16 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>2019/12/22</td>
+									<td><a href="https://atnd.org/events/109953">第18回「自作OSもくもく会」</a>を開催。 (予定)</td>
+								</tr>
+								<tr>
 									<td>2019/10/06</td>
-									<td><a href="https://atnd.org/events/108488">第17回「自作OSもくもく会」</a>を開催。</a> (予定)</td>
+									<td><a href="https://atnd.org/events/108488">第17回「自作OSもくもく会」</a>を開催。</td>
 								</tr>
 								<tr>
 									<td>2019/07/15</td>
-									<td><a href="https://atnd.org/events/106678">第16回「自作OSもくもく会」</a>を開催。</a></td>
+									<td><a href="https://atnd.org/events/106678">第16回「自作OSもくもく会」</a>を開催。</td>
 								</tr>
 								<tr>
 									<td>2019/05/12</td>
