チャンネル一覧更新

--- a/slack.html
+++ b/slack.html
@@ -76,6 +76,8 @@
 							<dd>エミュレータやハイパーバイザ系の話題を扱うチャンネルです。</dd>
 							<dt><a href="https://osdev-jp.slack.com/messages/CA13F2LAH" target="_blank">#進捗発表</a></dt>
 							<dd>自作OSの進捗状況を発表・共有します。</dd>
+							<dt><a href="https://osdev-jp.slack.com/archives/CQPJU27V5">#知識表現</a></dt>
+							<dd>自作OSで如何に知識情報を表現するか議論します。</dd>
 						</dl>
 					</article>
 					<br />
