--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<article id="messages">
 						<strong style="color:red;font-size:160%">注意</strong>
 						<p>このウェブサイトは<a href="https://github.com/Takym">Takym</a>が勝手に作成した物で、非公式です。</p>
-						<p>本家サイトは<a href="http://osdev-jp">http://osdev-jp</a>です。フォーク元のGitリポジトリは<a href="https://github.com/osdev-jp/osdev-jp.github.io">https://github.com/osdev-jp/osdev-jp.github.io</a>です。</p>
+						<p>本家サイトは<a href="https://osdev.jp">https://osdev.jp</a>です。フォーク元のGitリポジトリは<a href="https://github.com/osdev-jp/osdev-jp.github.io">https://github.com/osdev-jp/osdev-jp.github.io</a>です。</p>
 						<p>本家サイトやWikiから情報が遅れている場合は、<a href="https://github.com/Takym/osdev-jp.github.io/issues">GitHub 上の Issues</a>でお願します。</p>
 						<p>このコミュニティは<a href="https://osdev.org">osdev.org</a>とは無関係です。</p>
 					</article>
